--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,16 @@
-<h1>Hello World !</h1>
-<router-outlet></router-outlet>
+<div class="container">
+  <h3 class="d-flex justify-content-center">Angular10, web API, SQL Server App Demo</h3>
+  <h5 class="d-flex justify-content-center">Employee Management Portal</h5>
+
+  <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <button routerLink="department" class="m-1 btn btn-light btn-outline-primary" Button>Depatments</button>
+      </li>
+      <li class="nav-item">
+        <button routerLink="employee" class="m-1 btn btn-light btn-outline-primary" Button>Employees</button>
+      </li>
+    </ul>
+  </nav>
+  <router-outlet></router-outlet>
+</div>
